--- a/roles/cert_manager/tasks/main.yaml
+++ b/roles/cert_manager/tasks/main.yaml
@@ -7,8 +7,10 @@
   when: (rancher_tls_source is defined and rancher_tls_source in ["rancher", "letsEncrypt"]) and not ansible_check_mode
   
 
+
+
 - name: Install cert-manager
-  community.kubernetes.helm:
+  kubernetes.core.helm:
     name: cert-manager
     chart_ref: jetstack/cert-manager
     namespace: cert-manager
@@ -16,4 +18,6 @@
     release_values:
       installCRDs: true
     state: present
+    wait: yes                  # Wait for all resources to be ready
+    wait_timeout: 120s          # Wait up to 300 seconds (5 minutes)
   when: not ansible_check_mode
