--- a/roles/k3s_master/tasks/uninstall.yaml
+++ b/roles/k3s_master/tasks/uninstall.yaml
@@ -4,26 +4,26 @@
     name: k3s
     state: stopped
     enabled: no
+  ignore_errors: yes
 
 - name: Uninstall K3s
-  ansible.builtin.shell: |
-    /usr/local/bin/k3s-uninstall.sh
+  ansible.builtin.shell: /usr/local/bin/k3s-uninstall.sh
   args:
-    warn: false
     executable: /bin/bash
   ignore_errors: yes
 
 - name: Remove kubeconfig
   ansible.builtin.file:
-    path: ~/.kube/config
+    path: "{{ ansible_env.HOME }}/.kube/config"
     state: absent
+  ignore_errors: yes
 
 - name: Remove K3s directories
   ansible.builtin.file:
     path: "{{ item }}"
     state: absent
-    recurse: yes
   loop:
     - /etc/rancher/k3s
     - /var/lib/rancher/k3s
     - /var/lib/rancher/agent
+  ignore_errors: yes
