--- a/roles/rancher/tasks/main.yaml
+++ b/roles/rancher/tasks/main.yaml
@@ -33,9 +33,8 @@
         {
           'hostname': rancher_hostname,
           'bootstrapPassword': rancher_bootstrap_password,
-          'rancherImage': 'docker.io/rancher/rancher',
-          'rancherImageTag': rancher_version,
           'ingress': {
+            'ingressClassName': 'traefik',
             'tls': {
               'source': rancher_tls_source if rancher_tls_source in ['rancher', 'secret'] else 'letsEncrypt'
             }
