--- a/inventories/dev/hosts.yaml
+++ b/inventories/dev/hosts.yaml
@@ -1,6 +1,12 @@
 all:
   hosts:
-    dev-k3s-master:
+    dev-k3s-master-01:
       ansible_host: ec2-3-92-163-207.compute-1.amazonaws.com
       ansible_user: ubuntu
       ansible_ssh_private_key_file: /home/dev/.ssh/dev-jag.pem
+    
+    dev-k3s-master-02:
+      ansible_host: ec2-3-92-163-207.compute-1.amazonaws.com
+      ansible_user: ubuntu
+      ansible_ssh_private_key_file: /home/dev/.ssh/dev-jag.pem
+    
