--- a/roles/cert_manager/tasks/main.yaml
+++ b/roles/cert_manager/tasks/main.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Add Jetstack Helm repo
-  community.kubernetes.helm_repository:
+  kubernetes.core.helm_repository:
     name: jetstack
     repo_url: https://charts.jetstack.io
     state: present
