--- a/dbs/mysql-docker-compose.yaml
+++ b/dbs/mysql-docker-compose.yaml
@@ -6,23 +6,21 @@ services:
     container_name: mysql-prod
     restart: unless-stopped
 
-    # Environment variables (secure credentials recommended via .env)
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?Root password required}
-      MYSQL_DATABASE: ${MYSQL_DATABASE:-database-name}
-      MYSQL_USER: ${MYSQL_USER:-username}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-password}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
 
     ports:
-      - "3306:3306"  # Expose only if needed externally; otherwise remove
+      - "3306:3306"
 
-    # Persistent storage for production
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./mysql-init:/docker-entrypoint-initdb.d:ro  # Optional init scripts
+      - ./mysql-init:/docker-entrypoint-initdb.d:ro
 
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u root -p${MYSQL_ROOT_PASSWORD} || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -37,4 +35,3 @@ networks:
 
 volumes:
   mysql_data:
-    driver: local
